@@ -7,6 +7,7 @@ Version 1.0.16 - DD.Feb.2012
 * Fix VC-1 motion vector modes for Ivy Bridge
 * Fix MFX_QM_STATE for H.264 flat scaling lists (IVB)
 * Fix and simplify AVC_REF_IDX_STATE setup (ILK, SNB, IVB)
+* Fix and simplify first macroblock bit offset calculation (ILK, SNB, IVB)
 
 Version 1.0.15 - 28.Oct.2011
 * Add auto-generated Debian packaging
